Add interaction to earth view (lat-long marker and line dragging)
[#97109346]

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   <label><input type="checkbox" id="earth-tilt">Tilted?</label>
   Latitude:
   <div id="latitude-slider"></div>
+  Longitude:
+  <div id="longitude-slider"></div>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
