Add city pulldown
[#89936582] [#97290998]

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <div id="day-slider"></div>
   <label><input type="checkbox" id="earth-rotation">Rotating?</label>
   <label><input type="checkbox" id="earth-tilt">Tilted?</label>
+  <label>Select city: <select id="city-pulldown"></select></label>
   Latitude:
   <div id="latitude-slider"></div>
   Longitude:
