Add sun-earth line checkbox
[#89621404]

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div id="day-slider"></div></label>
   <label><input type="checkbox" id="earth-rotation">Rotating</label>
   <label><input type="checkbox" id="earth-tilt">Tilted</label>
+  <label><input type="checkbox" id="sun-earth-line">Sun-earth line</label>
   <label>Select city: <select id="city-pulldown"></select></label>
   <label>Latitude: <span id="lat-value"></span>
   <div id="latitude-slider"></div></label>
