Support dynamic resizing of the views
[#97738624]

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
 </head>
 <body>
 
-<div class="view-container big">
-  <canvas id="earth-view"></canvas>
-</div>
-<div class="view-container small">
-  <canvas id="orbit-view"></canvas>
-  <canvas id="rays-view"></canvas>
+<div class="view-container">
+  <div id="earth-view" class="view main"></div>
+  <div id="orbit-view" class="view small-top"></div>
+  <div id="rays-view" class="view small-bottom"></div>
 </div>
 
 <div class="controls">
