Tweak UI, use Bootstrap CSS, add view labels

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset=utf-8>
   <title>Earth Orbit</title>
   <link href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
 
