Added branding and adjusted layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang=en>
 <head>
   <meta charset=utf-8>
   <title>Earth Orbit</title>
   <link href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="http://use.typekit.com/hdw8ayt.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-
 <div id="app"></div>
-
+<footer id="page-footer">
+  <section>
+    <a id="cc-brand" href="http://concord.org/" target="_blank" title="The Concord Consortium - Revolutionary digital learning for science, math and engineering"><img src="images/concord-consortium.png" alt="The Concord Consortium" /></a>
+    <p>&copy; Copyright 2015 The Concord Consortium</p>
+  <section>
+</footer>
 <!--THREE.js doesn't work well with NPM modules, so import it manually.-->
 <!--vendor/threejs-r71 is a simple copy of git repository, but only necessary files are left.-->
 <script src="vendor/threejs-r71/build/three.min.js"></script>
