Adjust default settings, support `initialState` property in Seasons component
[#127463571]

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
   <meta charset=utf-8>
-  <title>Earth Orbit</title>
+  <title>Seasons</title>
   <script src="http://use.typekit.com/hdw8ayt.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
